--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "astro-paper",
-  "version": "2.3.0",
+  "name": "blog.oury.dev",
+  "version": "1.0",
   "private": false,
   "scripts": {
     "dev": "astro check --watch & astro dev",
