--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     }
   },
   "lint-staged": {
-    "!(*.{png,jpg,jpeg,webp})": [
+    "!(*.{png,jpg,jpeg,webp,svg})": [
       "prettier --plugin-search-dir=. --write"
     ]
   }
