--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     }
   },
   "lint-staged": {
-    "!(*.{png,jpg,jpeg,webp,svg,xml,ico})": [
+    "!(*.{png,jpg,jpeg,webp,svg,xml,ico,gif})": [
       "prettier --plugin-search-dir=. --write"
     ]
   }
